--- a/style.css
+++ b/style.css
@@ -4,16 +4,20 @@ body,
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background: lightblue;
+  background: lightgreen;
 }
 
 .title1 {
-  background-color: blue;
+  background-color: olivedrab;
+  opacity: 0.4;
   text-align: center;
   font: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   margin-left: 30%;
   margin-right: 30%;
+  border: 1px black outset;
+  border-radius: 25px / 15px;
+  box-shadow: 3px 3px 10px grey;
 }
 
 .title {
