--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body,
 ::before,
 ::after {
@@ -18,6 +22,10 @@ body,
   border: 1px black outset;
   border-radius: 25px / 15px;
   box-shadow: 3px 3px 10px grey;
+}
+
+.section {
+  display: flex;
 }
 
 .title {
@@ -52,4 +60,25 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+}
+
+a:hover {
+  color: greenyellow;
+}
+
+a:active {
+  color: red;
+}
+
+td {
+  border: 1px solid black;
+}
+
+table {
+border-collapse: collapse;
+}
+footer {
+  display: flex;
+  justify-content: center;
+  align-items:flex-end;
 }
