--- a/style.css
+++ b/style.css
@@ -1,31 +1,27 @@
-* {
-    box-sizing: border-box;
-}
-
 body,
 ::before,
 ::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background: lightgreen;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background: lightgreen;
 }
 
 .title1 {
-    background-color: olivedrab;
-    opacity: 0.4;
-    text-align: center;
-    font: bolder;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    margin-left: 30%;
-    margin-right: 30%;
-    border: 1px black outset;
-    border-radius: 25px / 15px;
-    box-shadow: 3px 3px 10px grey;
+  background-color: olivedrab;
+  opacity: 0.4;
+  text-align: center;
+  font: bolder;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  margin-left: 30%;
+  margin-right: 30%;
+  border: 1px black outset;
+  border-radius: 25px / 15px;
+  box-shadow: 3px 3px 10px grey;
 }
 
 .section {
-    display: flex;
+  display: flex;
 }
 
 /* .title {
@@ -34,72 +30,70 @@ body,
     font-family: Arial, Helvetica, sans-serif;
 } */
 
-.title1 h1 {
-    color: bisque;
-    font-style: normal;
-    display: flex;
-    justify-content: center;
-}
-
 h1 {
-    color: red;
-    font-style: normal;
-    display: flex;
-    justify-content: center;
+  color: bisque;
+  font-style: normal;
+  display: flex;
+  justify-content: center;
 }
 
 h2 {
-    font-style: italic;
-    font-family: "Times New Roman", Times, serif;
-    color: rgb(25, 250, 231);
+  font-style: italic;
+  font-family: "Times New Roman", Times, serif;
+  color: rgb(25, 250, 231);
 }
 
 h3 {
-    color: crimson;
+  color: crimson;
 }
 
 .photo {
-    position: sticky;
-    top: 20px;
-    height: 200px;
-    width: 160px;
-    border-radius: 50%;
+  position: absolute;
+  top: 20px;
+  right: 10px;
+  height: 200px;
+  width: 160px;
+  border-radius: 50%;
 }
 
 .item {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 a:hover {
-    color: greenyellow;
+  color: greenyellow;
 }
 
 a:active {
-    color: red;
+  color: red;
 }
 
 td {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
-table {
-    border-collapse: collapse;
-}
+/* table {
+  border-collapse: collapse;
+} */
 
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 @media all and (max-width: 1024px) {
-        p
-        {
-            width: auto;
-            color: grey;
-            background-color: black;
-            font-size: 1.2em;
-        }
+  p {
+    width: auto;
+    color: grey;
+    background-color: black;
+    font-size: 1.2em;
+  }
+}
+
+.table {
+  background-color: turquoise;
+  border: solid 4px grey;
 }
